# mpralegnet_predict

./: LICENSE  README.md  pyproject.toml  requirements.txt
legnet/: __init__.py  checkpoint.py  config.py  data.py  encoding.py  metrics.py  model.py  train_utils.py
results/: asdvar_predictions_using_hepg2.tsv  asdvar_predictions_using_k562.tsv  asdvar_predictions_using_wtc11.tsv
scripts/: analyze_predictions.py  finetune.py  finetune_for_individual_sequences.py  finetune_for_sequence_pairs.py  finetune_for_sequence_pairs_multitask.py  finetune_for_sequence_pairs_using_delta_column.py  predict_ensemble.py  predict_using_single_model.py  predict_variant_effect_asdvar.py  predict_variant_effect_mpac_allelic_skew.py  predict_variant_effect_mpravardb.py
