[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legnet"
version = "0.1.0"
description = "Minimal MPRA-LegNet (LegNet) loader/predictor/fine-tuner"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your team"}]
dependencies = ["torch"]

[tool.setuptools.packages.find]
where = ["."]
include = ["legnet*"]
